src/parser/snapshots/minic__parser__parser_tests__fn_different_name.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int foo(void) { return 1; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 7) (1:5 - 1:8) Identifier(Symbol(0)) `foo`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: Constant(Integer(1))
          token: "(pos: 23 - 24) (1:24 - 1:25) Literal(Integer(1)) `1`"
