src/parser/snapshots/minic__parser__parser_tests__parser_no_return.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body: []
