src/parser/snapshots/minic__parser__parser_tests__parser_return_n.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { return 42; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: Constant(Integer(42))
          token: "(pos: 24 - 26) (1:25 - 1:27) Literal(Integer(42)) `42`"
