src/parser/snapshots/minic__parser__parser_tests__parser_simple_fn.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { return 0; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: Constant(Integer(0))
          token: "(pos: 24 - 25) (1:25 - 1:26) Literal(Integer(0)) `0`"
