src/parser/snapshots/minic__parser__parser_tests__unary_expr.snap
---
source: src/parser/parser_tests.rs
expression: "test_string_success(\"int main(void) { return ~-~-1; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name: "(pos: 4 - 8) (1:5 - 1:9) Identifier(Symbol(0)) `main`"
    params: []
    body:
      - type: ReturnStmt
        expr:
          type: UnaryExpr(BitNot)
          operator: BitNot
          operand:
            type: UnaryExpr(Negate)
            operator: Negate
            operand:
              type: UnaryExpr(BitNot)
              operator: BitNot
              operand:
                type: UnaryExpr(Negate)
                operator: Negate
                operand:
                  type: Constant(Integer(1))
                  token: "(pos: 28 - 29) (1:29 - 1:30) Literal(Integer(1)) `1`"
                operator_token: "(pos: 27 - 28) (1:28 - 1:29) Minus `-`"
              operator_token: "(pos: 26 - 27) (1:27 - 1:28) BitNot `~`"
            operator_token: "(pos: 25 - 26) (1:26 - 1:27) Minus `-`"
          operator_token: "(pos: 24 - 25) (1:25 - 1:26) BitNot `~`"
